# pokerbots-2020

./: .gitignore  README.md  cfr.py  cfr_trainer.py  cleanup_experiment.sh  constants.py  deep_cfr_player.py  engine.py  evaluate.py  infoset.py  libpoker-eval.so.1  memory.py  memory_buffer.py  memory_buffer_dataset.py  network.py  network_wrapper.py  options.py  pbots_calc.py  preflop_odds.pkl  ray_network_wrapper.py  ray_traverse_example.py  regret_matching_strategy.py  requirements.txt  run_cfr.py  setup.sh  ssh_instance.sh  ssh_trainer_01.sh  tensorboard.sh  test_memory.py  test_network.py  test_trainer.py  test_utils.py  train.py  train_cfr.py  train_strategy.py  trainer.py  traverse.py  traverse_example.py  traverse_until_turn_example.py  utils.py
bot/: .PREV_BUILD_DIR  CMakeLists.txt  build.sh  cfr_player.cpp  cfr_player.hpp  cluster_centroids_10.txt  commands.json  permutation_filter.py  player.hpp  player.py  run.sh  save_samples.py  showdown_results_02.txt  test_cpp.py
bot/pokerbots_cpp/: CMakeLists.txt  __init__.py  bindings.cpp  cfr.cpp  cfr.hpp  cfr_main_10_16.cpp  cfr_main_kmeans.cpp  cfr_main_large.cpp  cfr_main_medium.cpp  cfr_main_small.cpp  cfr_trainer.cpp  cfr_trainer.hpp  engine_modified.hpp  hand_clustering.cpp  hand_clustering.hpp  hand_clustering_main.cpp  history_tracker.cpp  history_tracker.hpp  infoset.cpp  infoset.hpp  make_opponent_clusters.py  opponent_clusters.txt  permutation_filter.cpp  permutation_filter.hpp  regret_matched_strategy.cpp  regret_matched_strategy.hpp  test_cfr.cpp
bot/pokerbots_cpp/OMPEval/: CMakeLists.txt  ompeval.cpp
bot/pokerbots_cpp_python/: CMakeLists.txt  bindings.cpp  preflop_equity.txt  test_permutation_filter.cpp
bot/pokerbots_cpp_python/OMPEval/: Makefile
bot/python_skeleton/: .PREV_BUILD_DIR  CMakeLists.txt  avg_strategy.txt  build.sh  cfr_player.cpp  cfr_player.hpp  commands.json  history_tracker.cpp  history_tracker.hpp  main.cpp  permutation_filter.py  player.cpp  player.hpp  player.py  run.sh  showdown_results_01.txt  test_cpp.py  test_history_tracker.cpp  test_permutation_filter.py
bot/python_skeleton/pokerbots_cpp/: CMakeLists.txt  main.cpp  permutation_filter.cpp  permutation_filter.hpp
bot/python_skeleton/pokerbots_cpp_python/: CMakeLists.txt  __init__.py  bindings.cpp  cfr.cpp  cfr.hpp  cfr_main.cpp  engine_modified.cpp  engine_modified.hpp  history_tracker.cpp  history_tracker.hpp  infoset.cpp  infoset.hpp  main.cpp  permutation_filter.cpp  permutation_filter.hpp  regret_matched_strategy.cpp  regret_matched_strategy.hpp  test_cfr.cpp  test_history_tracker.cpp  test_permutation_filter.cpp
bot/skeleton/: __init__.py
cfr/: avg_strategy_0.pkl  convert_to_maps.py
cfr/07/: avg_strategy.txt  avg_strategy_0.pkl
experiments/: cfr_regression.sh  cfr_small.sh  cfr_small_regression.sh  deep_cfr_paper.sh  deep_cfr_prelim.sh  eval_exploitability.sh  regression_test.sh  train_strategy_prelim.sh
graveyard/: mp_example.py  queue_example.py  queue_example2.py  ray_example.py  ray_traverse_example.py  traverse_example2.py
pypokergui/: poker_conf.yaml  run_game.py  run_game.sh
test/: test_cfr.py  test_infoset.py  test_memory_buffer.py  test_memory_buffer_dataset.py  test_network.py  test_trainer.py  test_traverse.py  test_utils.py
